@@ -21,6 +21,7 @@ export(generate.ds.uncertainty)
 export(generate.mb.sample)
 export(latlong2km)
 export(make.soapgrid)
+export(plot_pred_by_term)
 export(rqgam.check)
 export(trim.var)
 export(vis.concurvity)
@@ -28,6 +29,9 @@ import(ggplot2)
 import(mgcv)
 import(mrds)
 import(nlme)
+importFrom(ggplot2,facet_wrap)
+importFrom(ggplot2,geom_tile)
+importFrom(ggplot2,ggplot)
 importFrom(grDevices,boxplot.stats)
 importFrom(graphics,abline)
 importFrom(graphics,axis)
